--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: dev
     application:
-      name: online-backend
+      name: online-shop
 server:
   port: 8085
   servlet:
